feat: initial completion for boilerplate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.8'
 services:
+  redis:
+    image: redis
+
   db:
     image: postgres
     environment:
@@ -10,6 +13,16 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     ports:
       - "5432:5432"
+
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ink@inception.com
+      PGADMIN_DEFAULT_PASSWORD: inkadmin
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
