feat: initial commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,30 @@ services:
     depends_on:
       - db
 
+  minio:
+    image: minio/minio:latest
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio_data:/data
+
+  minio-client:
+    image: minio/mc:latest
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc alias set local http://minio:9000 minio minio123 &&
+      /usr/bin/mc mb local/bucket --ignore-existing &&
+      /usr/bin/mc policy set public local/bucket &&
+      tail -f /dev/null
+      "
+    depends_on:
+      - minio
+
 volumes:
   postgres_data:
+  minio_data:
