--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,27 +26,15 @@ services:
 
   minio:
     image: minio/minio:latest
+    volumes:
+      - ./minio_data:/minio_files
+    environment:
+      MINIO_ROOT_USER: minioaccess
+      MINIO_ROOT_PASSWORD: miniopass
+    command: 'minio server /minio_files --console-address ":9001"'
     ports:
       - 9000:9000
       - 9001:9001
-    environment:
-      MINIO_ACCESS_KEY: minio
-      MINIO_SECRET_KEY: minio123
-    command: server /data --console-address ":9001"
-    volumes:
-      - minio_data:/data
-
-  minio-client:
-    image: minio/mc:latest
-    entrypoint: >
-      /bin/sh -c "
-      /usr/bin/mc alias set local http://minio:9000 minio minio123 &&
-      /usr/bin/mc mb local/bucket --ignore-existing &&
-      /usr/bin/mc policy set public local/bucket &&
-      tail -f /dev/null
-      "
-    depends_on:
-      - minio
 
 volumes:
   postgres_data:
