--- a/devops/nginx/nginx.prod.conf
+++ b/devops/nginx/nginx.prod.conf
@@ -5,6 +5,9 @@ server {
     # Define the maximum allowed size of the client request body
     client_max_body_size 32M;
 
+    # Increase server_names_hash_bucket_size to avoid hash errors
+    server_names_hash_bucket_size 128;
+
     # Location for static files
     location /static/ {
         alias /usr/share/nginx/html/static/;
