--- a/devops/nginx/nginx.prod.conf
+++ b/devops/nginx/nginx.prod.conf
@@ -1,4 +1,3 @@
-
 # If we receive X-Forwarded-Proto, pass it through; otherwise, pass along the
 # scheme used to connect to this server
 map $http_x_forwarded_proto $proxy_x_forwarded_proto {
@@ -39,27 +38,34 @@ proxy_send_timeout 600;
 
 server {
     listen 80;
+    server_name ec2-52-15-135-109.us-east-2.compute.amazonaws.com;
 
+    # Location for static files
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
+        expires 30d;
+        access_log off;
+    }
+
+    # Location for media files
+    location /media/ {
+        alias /usr/share/nginx/html/media/;
+        expires 30d;
+        access_log off;
+    }
+
+    # Proxy all other requests to the Django app
     location / {
-        proxy_pass http://app:8000;
+        proxy_pass http://127.0.0.1:8000;
         proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_set_header Host $http_host;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $proxy_connection;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-        proxy_set_header X-Forwarded-Ssl $proxy_x_forwarded_ssl;
-        proxy_set_header X-Forwarded-Port $proxy_x_forwarded_port;
-        proxy_set_header Proxy "";
-    }
-
-    location /static/ {
-        alias /app/static/;
-    }
-
-    location /media/ {
-        alias /app/media/;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_redirect off;
     }
 }
