--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - develop
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,21 +18,30 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install dependencies locally
         run: |
           python -m venv env
           source env/bin/activate
           pip install -r requirements.txt
 
+      - name: Ensure remote directory exists
+        run: |
+          ssh -i ${{ secrets.EC2_SSH_KEY }} -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "mkdir -p /home/ubuntu/ink-inception-backend"
+
       - name: Copy files to EC2
         run: |
-          scp -i ${{ secrets.EC2_SSH_KEY }} -o StrictHostKeyChecking=no -r * ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/ink-inception-backend
+          scp -i ${{ secrets.EC2_SSH_KEY }} -o StrictHostKeyChecking=no -r ./* ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/ink-inception-backend
 
       - name: SSH into EC2 and run deployment scripts
         run: |
           ssh -i ${{ secrets.EC2_SSH_KEY }} -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
           cd /home/ubuntu/ink-inception-backend
+          # Ensure virtual environment is activated
+          if [ ! -d "env" ]; then
+            python3 -m venv env
+          fi
           source env/bin/activate
           pip install -r requirements.txt
-          pm2 restart ink-inception-backend
+          # Restart the application using PM2
+          pm2 restart ink-inception-backend || pm2 start gunicorn --name ink-inception-backend --interpreter python3 -- gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3
           EOF
